apps/base/microservices/postgres/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    app.kubernetes.io/environment: database
    istio-injection: enabled
